--- a/css/main.css
+++ b/css/main.css
@@ -25,3 +25,17 @@ body {
   display: block;
   width: 100%;
 }
+
+.relative {
+  position: relative;
+}
+
+.absolute {
+  position: absolute;
+  bottom: 2em;
+  left: 2em;
+}
+
+figure {
+  margin: 0;
+}
