--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,7 @@ html {
   text-size-adjust: 100%;
 
   font-family: 'Roboto Slab', serif;
+  line-height: 1.3;
 }
 
 *, *::before, *::after {
@@ -48,6 +49,6 @@ figcaption {
 
 .absolute {
   position: absolute;
-  bottom: .5em;
-  left: .5em;
+  bottom: .5rem;
+  left: .5rem;
 }
