--- a/css/main.css
+++ b/css/main.css
@@ -12,8 +12,7 @@ html {
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
 
-  font-family: 'Roboto Slab', serif;
-  line-height: 1.3;
+  font: normal 100%/1.3 "Roboto Slab", serif;
 }
 
 *, *::before, *::after {
